--- a/app/src/main/res/layout/activity_b6.xml
+++ b/app/src/main/res/layout/activity_b6.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content">
 
         <Button
-            android:id="@+id/b1_1"
+            android:id="@+id/b6_1"
             style="@style/Widget.AppCompat.Button.Small"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -17,14 +17,14 @@
             android:drawableRight="@drawable/down_arrow"
             android:gravity="start|center_vertical"
             android:padding="20dip"
-            android:text="@string/b1_1"
+            android:text="@string/b6_1"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/b1_0text" />
+            app:layout_constraintTop_toBottomOf="@+id/b6_0text" />
 
         <Button
-            android:id="@+id/b1_2"
+            android:id="@+id/b6_2"
             style="@style/Widget.AppCompat.Button.Small"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -32,14 +32,14 @@
             android:drawableRight="@drawable/down_arrow"
             android:gravity="start|center_vertical"
             android:padding="20dip"
-            android:text="@string/b1_2"
+            android:text="@string/b6_2"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/b1_1layout" />
+            app:layout_constraintTop_toBottomOf="@+id/b6_1layout" />
 
         <Button
-            android:id="@+id/b1_3"
+            android:id="@+id/b6_3"
             style="@style/Widget.AppCompat.Button.Small"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -47,14 +47,14 @@
             android:drawableRight="@drawable/down_arrow"
             android:gravity="start|center_vertical"
             android:padding="20dip"
-            android:text="@string/b1_3"
+            android:text="@string/b6_3"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/b1_2layout" />
+            app:layout_constraintTop_toBottomOf="@+id/b6_2layout" />
 
         <Button
-            android:id="@+id/b1_4"
+            android:id="@+id/b6_4"
             style="@style/Widget.AppCompat.Button.Small"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -62,14 +62,14 @@
             android:drawableRight="@drawable/down_arrow"
             android:gravity="start|center_vertical"
             android:padding="20dip"
-            android:text="@string/b1_4"
+            android:text="@string/b6_4"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/b1_3layout" />
+            app:layout_constraintTop_toBottomOf="@+id/b6_3layout" />
 
         <Button
-            android:id="@+id/b1_5"
+            android:id="@+id/b6_5"
             style="@style/Widget.AppCompat.Button.Small"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -77,236 +77,91 @@
             android:drawableRight="@drawable/down_arrow"
             android:gravity="start|center_vertical"
             android:padding="20dip"
-            android:text="@string/b1_5"
+            android:text="@string/b6_5"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/b1_4layout" />
-
-        <Button
-            android:id="@+id/b1_6"
-            style="@style/Widget.AppCompat.Button.Small"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableEnd="@drawable/down_arrow"
-            android:drawableRight="@drawable/down_arrow"
-            android:gravity="start|center_vertical"
-            android:padding="20dip"
-            android:text="@string/b1_6"
-            android:textSize="15sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/b1_5layout" />
+            app:layout_constraintTop_toBottomOf="@+id/b6_4layout" />
 
         <RelativeLayout
-            android:id="@+id/b1_3layout"
+            android:id="@+id/b6_1layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/b1_3">
-
-            <TableLayout
-                android:id="@+id/b1_3table"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/b1_3text">
-
-                <TableRow
-                    android:layout_width="wrap_content"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:background="#000000">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_margin="1dp"
-                        android:background="#FFFFFF"
-                        android:gravity="center"
-                        android:padding="5dp"
-                        android:text="@string/b1_3T11"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_margin="1dp"
-                        android:layout_weight="1"
-                        android:background="#FFFFFF"
-                        android:padding="5dp"
-                        android:text="@string/b1_3T21" />
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:background="#000000">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_margin="1dp"
-                        android:background="#FFFFFF"
-                        android:gravity="center"
-                        android:padding="5dp"
-                        android:text="@string/b1_3T12"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_margin="1dp"
-                        android:layout_weight="1"
-                        android:background="#FFFFFF"
-                        android:padding="5dp"
-                        android:text="@string/b1_3T22" />
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:background="#000000">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_margin="1dp"
-                        android:background="#FFFFFF"
-                        android:gravity="center"
-                        android:padding="5dp"
-                        android:text="@string/b1_3T13"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_margin="1dp"
-                        android:layout_weight="1"
-                        android:background="#FFFFFF"
-                        android:padding="5dp"
-                        android:text="@string/b1_3T23" />
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:background="#000000">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_margin="1dp"
-                        android:background="#FFFFFF"
-                        android:gravity="center"
-                        android:padding="5dp"
-                        android:text="@string/b1_3T14"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_margin="1dp"
-                        android:layout_weight="1"
-                        android:background="#FFFFFF"
-                        android:padding="5dp"
-                        android:text="@string/b1_3T24" />
-                </TableRow>
-
-            </TableLayout>
+            app:layout_constraintTop_toBottomOf="@+id/b6_1">
 
             <TextView
-                android:id="@+id/b1_3text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="@string/b1_3text"
+                android:hint="@string/b6_1text"
                 android:padding="10dip" />
         </RelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/b1_1layout"
+            android:id="@+id/b6_2layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/b1_1">
+            app:layout_constraintTop_toBottomOf="@+id/b6_2">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="@string/b1_1text"
+                android:hint="@string/b6_2text"
                 android:padding="10dip" />
         </RelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/b1_2layout"
+            android:id="@+id/b6_3layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/b1_2">
+            app:layout_constraintTop_toBottomOf="@+id/b6_3">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="@string/b1_2text"
-                android:padding="10dip"/>
+                android:hint="@string/b6_3text"
+                android:padding="10dip" />
         </RelativeLayout>
 
+<!--        TODO: figure out how to keep layout from centering itself-->
         <RelativeLayout
-            android:id="@+id/b1_4layout"
+            android:id="@+id/b6_4layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/b1_4">
+            app:layout_constraintTop_toBottomOf="@+id/b6_4">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="@string/b1_4text"
-                android:padding="10dip"/>
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/b1_5layout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/b1_5">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="@string/b1_5text"
+                android:hint="@string/b6_4text"
                 android:padding="10dip" />
         </RelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/b1_6layout"
+            android:id="@+id/b6_5layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/b1_6">
+            app:layout_constraintTop_toBottomOf="@+id/b6_5">
 
-            <!--            <TextView-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:hint="@string/b1_6text"-->
-            <!--                android:padding="10dip" />-->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/b6_5text"
+                android:padding="10dip" />
         </RelativeLayout>
 
 
         <TextView
-            android:id="@+id/b1_0text"
+            android:id="@+id/b6_0text"
             android:layout_width="411dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
@@ -314,7 +169,7 @@
             android:layout_marginRight="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            android:hint="@string/b1_0text"
+            android:hint="@string/b6_0text"
             android:padding="20dip"
             android:textColor="#ff000000"
             android:textSize="18sp"
