--- a/app/src/main/res/layout/activity_b5.xml
+++ b/app/src/main/res/layout/activity_b5.xml
@@ -112,22 +112,15 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/b5_3text">
 
-                <TableRow
-                    android:layout_width="fill_parent"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_margin="1dp"
                     android:layout_weight="1"
                     android:background="#c5e0b3"
-                    android:gravity="center">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_margin="1dp"
-                        android:background="#c5e0b3"
-                        android:gravity="center"
-                        android:padding="5dp"
-                        android:text="@string/b5_3T11" />
-                </TableRow>
+                    android:gravity="center"
+                    android:padding="5dp"
+                    android:text="@string/b5_3T11" />
             </TableLayout>
 
             <TableLayout
@@ -198,22 +191,14 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/b5_3text2">
 
-                <TableRow
-                    android:layout_width="fill_parent"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_margin="1dp"
-                    android:layout_weight="1"
                     android:background="#c5e0b3"
-                    android:gravity="center">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_margin="1dp"
-                        android:background="#c5e0b3"
-                        android:gravity="center"
-                        android:padding="5dp"
-                        android:text="@string/b5_3TT11" />
-                </TableRow>
+                    android:gravity="center"
+                    android:padding="5dp"
+                    android:text="@string/b5_3TT11" />
             </TableLayout>
 
             <TableLayout
@@ -283,22 +268,14 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/b5_3text3">
 
-                <TableRow
-                    android:layout_width="fill_parent"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_margin="1dp"
-                    android:layout_weight="1"
                     android:background="#FFFFFF"
-                    android:gravity="center">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_margin="1dp"
-                        android:background="#FFFFFF"
-                        android:gravity="center"
-                        android:padding="5dp"
-                        android:text="@string/b5_3TTT11" />
-                </TableRow>
+                    android:gravity="center"
+                    android:padding="5dp"
+                    android:text="@string/b5_3TTT11" />
             </TableLayout>
 
             <TableLayout
@@ -392,18 +369,26 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/b5_1">
 
+            <ImageView
+                android:id="@+id/b5_1image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/b5_1text"
+                app:srcCompat="@mipmap/cuatro_pilares"
+                android:contentDescription="@string/b5_1image" />
+
             <TextView
                 android:id="@+id/b5_1text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:hint="@string/b5_1text"
                 android:padding="10dp" />
-            <!--            TODO: insert chart-->
+
             <TextView
                 android:id="@+id/b5_1text2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/b5_1text"
+                android:layout_below="@+id/b5_1image"
                 android:hint="@string/b5_1text2"
                 android:padding="10dp" />
         </RelativeLayout>
