--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,9 +5,12 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
+            android:id="@+id/signin"
+            android:title="@string/signin"/>
+        <item
+            android:id="@+id/share"
             android:icon="@drawable/ic_launcher_foreground"
-            android:title="@string/otra" />
+            android:title="@string/share" />
 <!--        <item-->
 <!--            android:id="@+id/nav_gallery"-->
 <!--            android:icon="@drawable/ic_menu_gallery"-->
